# ComPairDAQ

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
Catch/source/: CMakeLists.txt
doc/: Doxyfile  Doxyfile_wTests
include/: ComPairCommandPacket.hxx  ComPairEventPacket.hxx  ComPairSubsystemEventPacket.hxx  SimSubsystemEventPacket.hxx  TrivialSubsystemEventPacket.hxx
source/: CMakeLists.txt  ComPairCommandPacket.cxx  ComPairEventPacket.cxx  ComPairSubsystemEventPacket.cxx  SimSubsystemEventPacket.cxx  TrivialSubsystemEventPacket.cxx
tests/: CMakeLists.txt  test-ComPairCommandPacket.cxx  test-ComPairEventPacket.cxx  test-ComPairSubsystemPacket.cxx
